--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+!**/target/
 
 ### STS ###
 .apt_generated
@@ -33,3 +34,5 @@ build/
 .vscode/
 
 
+target
+bin
